--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,5 +1,5 @@
 .App-header {
-    background: url("./assets/img/logo.png");
+    background: url("img/logo.png");
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
