--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,7 @@ body {
     background-size: cover;
     height: 100%;
     min-height: 100vh;
+    height: 100%;
     min-width: 100%;
     padding: 2rem 0;
 }
